Reduced scope to be able to focus on foundation before expanding. Resolved some issues with importing board state from FEN, still have a few bugs to hunt down (particularly the reversed board bug that I have NO clue what is causing it). Expanded importing board state from FEN to include all information instead of just the piece locations. Seemed kinda important idk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ project(Chessbot VERSION 0.1.0
         DESCRIPTION "A really bad chessbot for learning lol"
         LANGUAGES CXX)
 
-add_executable(Chessbot src/chessbot.cpp include/board.cpp include/board.hpp include/piece.cpp include/piece.hpp)
+add_executable(Chessbot 
+                src/chessbot.cpp 
+                include/board.cpp 
+                include/board.hpp)
+
 target_include_directories(Chessbot PUBLIC include)
